configure window form

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 PDP11-VISUAL/PDP11.sdf
 PDP11-VISUAL/PDP11.opensdf
+PDP11-VISUAL/Debug
+PDP11-VISUAL/PDP11-EMULATOR/Debug
+PDP11-VISUAL/PDP11-GUI/bin/Debug
+PDP11-VISUAL/PDP11-GUI/obj/Debug
